--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_attendance.html
@@ -5,6 +5,7 @@
    
 <div class="content">
    <h2> Attendance History </h2> 
+   <hr>
    <div class="form-row">
     <div class="form-group col-md-2">
         <label for="inputID">ID Number</label>
@@ -16,12 +17,7 @@
     </div>
     <div class="form-group col-md-3">
         <label for="inputDept">Department</label>
-        <select id="inputDept" class="form-control">
-          <option selected>Choose Department</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-        </select>
+        <input type="text" class="form-control" id="inputDept" readonly>
     </div>
     <div class="form-group col-md-3">
         <label for="mth_yr">Month & Year</label>
@@ -47,6 +43,7 @@
             </tr>
         </tbody>
     </table>
+  </div>
 </div>
 
 </div>
