--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/encode_page.html
@@ -12,15 +12,17 @@
                         <select id="inputDept" class="form-control">
                             <option selected>Choose Payroll Batch</option>
                         </select>
+                        <small id="inputDept" class="form-text text-muted">A Bank Payroll File can only be encoded if the payslips for the period have been successfully generated.</small> 
                     </div>
                     <button class="btn btn-secondary form-group col-md-2" type="button">Encode New Payroll</button>
                 </div>
-                <div class="alert alert-warning" role="alert">
+                <!--div class="alert alert-warning" role="alert">
                     <strong>Notice!</strong>
                     A Bank Payroll File can only be encoded if the payslips for the period have been successfully generated. 
-                </div>
+                </div-->
             </div>
         </div>
+        <hr>
         <div class="my-3">
             <h4> Bank Payroll File Records </h4>
             <table id="posts">
