--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -54,17 +54,29 @@
             <tbody>
                 <tr>
                     <td>ABC028</td>
-                    <td><a href="#">John Doe</a></td>
+                    <td><a href="#">Payslip not yet generated, can edit</a></td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td class="form-row">
-                        <a class="btn form-group mx-1" href="#"><i class="lni lni-eye"></i></a>
-                        <a class="btn form-group" href="#"><i class="lni lni-pencil-alt"></i></a>
+                        <a class="btn form-group" href="{% url 'payroll_breakdown' %}"><i class="lni lni-pencil-alt"></i></a>
                     </td>
-                    
+                </tr>
+                <tr>
+                    <tr>
+                        <td>ABC028</td>
+                        <td><a href="#">Payslip generated, cannot edit</a></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="form-row">
+                            <a class="btn form-group mx-1" href="#"><i class="lni lni-eye"></i></a>
+                        </td>
+                    </tr>
                 </tr>
             </tbody>
         </table>
