--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/login.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static '/bootstrap/css/style.css' %}">
         <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/product-sans">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -21,10 +21,17 @@
     <body>
         <div class="container-login">
             <div class="wrap-login">
-                <form class="login-form" method="POST" action=""> 
+                <form class="login-form" method="POST" action=""> {% csrf_token %}
                     <div class="text-center">
                         <img class= "login_logo" src="{% static '/sh logo.png' %}"> 
                         <h3> Log In </h3> 
+
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert" style="color: crimson"> {{ message }} </div>
+                            {% endfor %}
+                        {% endif %} 
+
                     </div>
                     <div class="form-group my-2">
                         <label for="userlogin">Username</label>
@@ -36,8 +43,10 @@
                         <input type="password" class="form-control" id="pwlogin" name="pwlogin"
                             placeholder="Enter Password" required>
                     </div>
-                    <a href="{% url 'dashboard' %}" class="btn my-2 btn-primary" type="submit">Log In</a>
-                    <a href="#" style="color:#861D1A"> Forgot Password? </a>
+                    <div class="text-center">
+                        <button class="btn my-2 btn-primary" type="submit">Log In</button>
+                        <p><a href="#" style="color:#861D1A"> Forgot Password? </a></p>
+                    </div>
                 </form>
             </div>      
         </div>
