--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/base.html
@@ -73,7 +73,7 @@
                 
             </ul>
             <div class="sidebar-footer">
-                <a href="#" class="sidebar-link">
+                <a href="{% url 'login' %}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
