--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -7,26 +7,66 @@
     <div class="card">
         <h3 class="card-header">Generate Payroll</h3>
         <div class="card-body">
+            <form method="POST" action="#">{% csrf_token %}
             <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputDept">Department</label>
-                    <select id="inputDept" class="form-control">
+                
+                <div class="form-group col-md-1">
+                    <!--<label for="inputDept">Department</label>
+                    <select id="inputDept" name="inputDept"class="form-control">
                         <option selected>Choose Department</option>
                         <option value="HR">HR</option>
                         <option value="IT">IT</option>
                         <option value="Sales">Sales</option>
                         <option value="Accounting">Accounting</option>
+                    </select>-->
+                
+                    <label for="inputID">Employee ID</label>
+                    <select id="inputID" name="inputID"class="form-control">
+                    {% for b in a %}
+                        <option value="{{b.id_number}}">{{b.id_number}}</option>
+                    {% endfor %}
                     </select>
                 </div>
                 <div class="form-group col-md-2">
                     <label for="inputStartDate">Payroll Range Start Date</label>
-                    <input type="date" class="form-control" id="inputStartDate">
+                    <input type="date" class="form-control" id="inputStartDate" name="inputStartDate">
                 </div>
                 <div class="form-group  col-md-2">
                     <label for="inputEndDate">Payroll Range End Date</label>
-                    <input type="date" class="form-control" id="inputEndDate">
+                    <input type="date" class="form-control" id="inputEndDate" name="inputEndDate">
                 </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputULD">ULD</label>
+                    <input type="number" class="form-control" id="inputULD" name="inputULD">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputULDT">ULD - TYPE</label>
+                    <input type="text" class="form-control" id="inputULDT" name="inputULDT">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputCA">CA</label>
+                    <input type="number" class="form-control" id="inputCA" name="inputCA">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputCOOP">COOP</label>
+                    <input type="number" class="form-control" id="inputCOOP" name="inputCOOP">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputCOLA">COLA</label>
+                    <input type="number" class="form-control" id="inputCOLA" name="inputCOLA">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputADDE">Additional Earnings</label>
+                    <input type="number" class="form-control" id="inputADDE" name="inputADDE">
+                </div>
+                <div class="form-group  col-md-2">
+                    <label for="inputADDET">Additional Earnings - TYPE</label>
+                    <input type="text" class="form-control" id="inputADDET" name="inputADDET">
+                </div>
+
+
                 <button class="btn btn-secondary form-group col-md-2" type="button">Generate</button>
+                
             </div>
             <div class="alert alert-warning" role="alert">
                 <strong>Notice!</strong>
@@ -34,6 +74,7 @@
                 system will display the final and printable payslips instead of the 
                 computation table that needs confirmation and editing.
             </div>
+        </form>
         </div>
     </div>
     <div style="overflow-x:auto;">
