--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -65,7 +65,7 @@
                 </div>
 
 
-                <button class="btn btn-secondary form-group col-md-2" type="button">Generate</button>
+                <button class="btn btn-secondary form-group col-md-2" type="submit">Generate</button>
                 
             </div>
             <div class="alert alert-warning" role="alert">
