--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -74,7 +74,8 @@
                         <td></td>
                         <td></td>
                         <td class="form-row">
-                            <a class="btn form-group mx-1" href="#"><i class="lni lni-eye"></i></a>
+                            <a class="btn form-group mx-1" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                            data-bs-whatever=""><i class="lni lni-eye"></i></a>
                         </td>
                     </tr>
                 </tr>
@@ -84,9 +85,24 @@
 
 </div>
 
+<!-- Modals -->
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">View Employee Payslip</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="{% static 'SH-PAYROLL.xls' %}" style="width:100%; height:400px;"></iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
     
-
-
 
 {% endblock %}
