--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -43,7 +43,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><a href="{% url 'employee_attendance' %}">Edit</a> </td>
+                        <td><a href="{% url 'employee_attendance' UID=user.pk %}">Edit</a> </td>
                     </tr>
                 </tbody>
             </table>
