--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -73,7 +73,7 @@
 <footer>
     <div class="footer-wrap">
       <div class="back-button">
-          <a class="btn btn-dark mx-3" href="{% url 'generate_page' %}" type="button">Back</a>
+          <a class="btn btn-dark mx-3" href="{% url 'generate_page' UID=user.pk %}" type="button">Back</a>
       </div>
     </div>
   </footer>
