--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -8,7 +8,7 @@
     <div class="form-row"> 
         <h2 class="form-group col-md-6" > View Employee Record </h1>
         <div class="action-icons col-md-6">
-            <a class="btn btn-info form-group" href="{% url 'employee_attendance' %}"> View Attendance </a>
+            <a class="btn btn-info form-group" href="{% url 'employee_attendance' UID=user.pk %}"> View Attendance </a>
             <button class="btn btn-primary form-group" type="button"> Edit Record</button>
         </div>
     </div>
@@ -110,7 +110,7 @@
         <hr>
         <div>
             <ul class="action-icons">
-                <li><a class="btn btn-danger" href="{% url 'employee_database' %}" type="button">Cancel</a></li>
+                <li><a class="btn btn-danger" href="{% url 'employee_database' UID=user.pk %}" type="button">Cancel</a></li>
                 <li><button class="btn btn-success" type="submit">Confirm</button></li>
             </ul>
         </div>
@@ -120,7 +120,7 @@
  <footer>
     <div class="footer-wrap">
       <div class="back-button">
-          <a class="btn btn-dark mx-3" href="{% url 'employee_database' %}" type="button">Back</a>
+          <a class="btn btn-dark mx-3" href="{% url 'employee_database' UID=user.pk %}" type="button">Back</a>
       </div>
     </div>
   </footer>
