--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -3,6 +3,28 @@
 
 {% block content %}
 
+<script>
+    $(document).ready(function() {
+        $('#U_A').click(function() {
+            $.ajax({
+                url: '{% url "A_UPLOAD" %}',
+                type: 'GET',  // Or 'POST' depending on your view's implementation
+                success: function(response) {
+                    $('#resultDiv').text('Data imported and database cleared successfully.');
+                },
+                error: function() {
+                    $('#resultDiv').text('Error executing Python code.');
+                }
+            });
+        });
+    });
+</script>
+
+
+
+
+
+
 <div class="main">
     <div class="dashboard-navbar">
         <form action="#">
@@ -14,8 +36,7 @@
         <div class="navbar-content">
             <ul class="main-nav">
                 <div class="nav-search">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        data-bs-whatever=""><i class="lni lni-upload"></i> Upload Attendance</button>
+                    <button type="button" name="U_A" id="U_A" class="btn btn-primary"><i class="lni lni-upload"></i> Upload Attendance</button>
                 </div>
             </ul>
         </div>
@@ -52,7 +73,7 @@
 </div>
 
 
-<!-- Modals -->
+<!-- Modals --
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
