--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/employee_info.html
@@ -37,7 +37,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" name="inputEmail4" value="{{a.Email}}"">
+            <input type="email" class="form-control" id="inputEmail4" name="inputEmail4" value="{{a.Email}}">
           </div>
         </div>
         <hr>
