--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/tax_module.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/tax_module.html
@@ -38,6 +38,16 @@
                     <td><button id="executeButton_WT">Update Witholding Tax </button></td>
                 </tr>
                 <tr>
+                    <td>Witholding Tax</td>
+                    <td>Additions</td>
+                    <td><button id="executeButton_HOLI">Update Holiday WIP</button></td>
+                </tr>
+                <tr>
+                    <td>Witholding Tax</td>
+                    <td>Additions</td>
+                    <td><button id="executeButton_LEAVE">Update Leave WIP</button></td>
+                </tr>
+                <tr>
                     <td>HMO</td>
                     <td>Deductions</td>
                     <td><a href="{% url 'HMO_DB' UID=user.pk %}">Open HMO DB</a></td>
