--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/dashboard.html
@@ -4,7 +4,14 @@
 {% block content %}
 
 <div class="content">
-    <h1> Dashboard </h1>
+    <h1>Dashboard</h1>
+    <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Welcome to the Silver Horizons Payroll App, {{user.username}}!</h4>
+          <!--p class="card-text">What would you like to do today?</p-->
+        </div>
+    </div>
+
 </div>
 
 
