--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -109,7 +109,7 @@
                 <tr>
                     <tr>
                         <td>{{a.id_number}}</td>
-                        <td>{{a.Last_name}}, {{a.First_name}} {{a.Middle_name}}></td>
+                        <td>{{a.Last_name}}, {{a.First_name}} {{a.Middle_name}}</td>
                         <td></td>
                         <td></td>
                         <td></td>
