--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/payroll_breakdown.html
@@ -21,11 +21,11 @@
         </div>
         <div class="form-group col-md-2">
             <label for="mth_yr">Payroll Range Start Date</label>
-            <input type="date" class="form-control" id="mth_yr">
+            <input type="date" class="form-control" id="mth_yr" readonly>
         </div>
         <div class="form-group col-md-2">
             <label for="mth_yr">Payroll Range End Date</label>
-            <input type="date" class="form-control" id="mth_yr">
+            <input type="date" class="form-control" id="mth_yr" readonly>
         </div>
     </div>
     <div style="overflow-x:auto;">
@@ -42,7 +42,19 @@
             <tbody>
                 <tr>
                     <td>
-                    </tr>
+                    <input type="date" class="form-control" id="mth_yr" readonly>
+                    </td>
+                    <td>
+                    <input type="date" class="form-control" id="mth_yr" readonly>
+                    </td>
+                    <td>
+                    <input type="date" class="form-control" id="mth_yr" readonly>
+                    </td>
+                    <td>
+                    <input type="date" class="form-control" id="mth_yr" readonly>
+                    </td>
+                    <td>
+                    <input type="date" class="form-control" id="mth_yr" readonly>
                     </td>
                 </tr>
             </tbody>
@@ -63,8 +75,29 @@
             <tbody>
                 <tr>
                     <td>
-                    </tr>
-                    </td>
+                        <input type="date" class="form-control" id="mth_yr" readonly>
+                        </td>
+                        <td>
+                        <input type="date" class="form-control" id="mth_yr" readonly>
+                        </td>
+                        <td>
+                        <input type="date" class="form-control" id="mth_yr" readonly>
+                        </td>
+                        <td>
+                        <input type="date" class="form-control" id="mth_yr" readonly>
+                        </td>
+                        <td>
+                        <input type="date" class="form-control" id="mth_yr" readonly>
+                        </td>
+                        <td>
+                            <input type="date" class="form-control" id="mth_yr" readonly>
+                            </td>
+                            <td>
+                            <input type="date" class="form-control" id="mth_yr" readonly>
+                            </td>
+                            <td>
+                                <input type="date" class="form-control" id="mth_yr" readonly>
+                                </td>
                 </tr>
             </tbody>
         </table>
