--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/generate_page.html
@@ -103,7 +103,7 @@
                     <td></td>
                     <td></td>
                     <td class="form-row">
-                        <a class="btn form-group" href="{% url 'payroll_breakdown' UID=user.pk %}"><i class="lni lni-pencil-alt"></i></a>
+                        <a class="btn form-group" href="{% url 'payroll_breakdown' UID=user.pk  EID="sra001"%}"><i class="lni lni-pencil-alt"></i></a>
                     </td>
                 </tr>
                 <tr>
