--- a/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
+++ b/shpayrollappv2/shpayrollappv2/payrollapp/templates/payrollapp/attendance_db.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#U_A').click(function() {
@@ -36,7 +36,7 @@
         <div class="navbar-content">
             <ul class="main-nav">
                 <div class="nav-search">
-                    <button type="button" name="U_A" id="U_A" class="btn btn-primary"><i class="lni lni-upload"></i> Upload Attendance</button>
+                    <button name="U_A" id="U_A"><i class="lni lni-upload"></i> Upload Attendance</button>
                 </div>
             </ul>
         </div>
